#260: Modified harmonized tariff schedules to be read from resources